TAG: mrkcoordload-5-0-0-11
TAG: mrkcoordload-5-0-0-10
DATE: 8/22/2012
STAFF: sc
RELEASE: dev
CHANGES: US 35 - add mirbase ids
1) assocload.config - set delete/reload to false because this deletes
   all associations for the load user
2) createInputFiles.py - query was selecting mbID instead of mgiID
   added explicit setting of user and passwork in python db module
3) assocload.config - use DATALOADSOUTPUT

TAG: mrkcoordload-5-0-0-9
TAG: mrkcoordload-5-0-0-8
DATE: 8/21/2012
STAFF: sc
RELEASE: dev
CHANGES: US 35 - add mirbase ids
1) Install - add assocload directories
2) runMrkCoordQC - fixed usage statement
3) mrkcoordload.sh - updated to run assocload
4) createInputFiles.py - updated to create assocload input
    file -- currently contains debug print statements 
5) assocload.config - added
6) mrkcoordload.config.default - added assocload settings

TAG: mrkcoordload-5-0-0-7
TAG: mrkcoordload-5-0-0-6
DATE: 8/02/2012
STAFF: sc
RELEASE: dev
CHANGES: US#92/93 Bug fixes
1) Remove \n in sanity report for missing data/column check
2) report on command line when new source/display

TAG: mrkcoordload-5-0-0-5
DATE: 7/s0/2012
STAFF: sc
RELEASE: dev
CHANGES: US#3 dn US#11 - bug fixes from testing
1) mrkcoordload.config.default - Added INVALID_CHR_RPT=${RPTDIR}/invalid_chr.rpt
2) checkColumns.py - don't strip the tokens before checking for numColumns
	removed some debug
3) mrkcoordQC.py - Added support for INVALID_CHR_RPT, exclude annot evid
4) mrkcoordQC.sh - Added support for INVALID_CHR_RPT

TAG: mrkcoordload-5-0-0-4
TAG: mrkcoordload-5-0-0-3
DATE: 7/26/2012
STAFF: sc
RELEASE: dev
CHANGES: US#3 dn US#11
1. Added checkColumns.py, mrkcoordQC.py, mrkcoordQC.sh
    runMrkCoordQC
    Note that mrkcoordQC.py will need to keep track of good
	lines (not rejected because of QC errrors) and write out
	to a load ready file when we run QC from the load 
2. mrkcoordload.sh - Added RUNTYPE=live default, Added commented
	out code to support running QC from the load