@@ -104,19 +104,19 @@ cleanDir ${OUTPUTDIR}
 # and is more recent than the input file, the load does not need to be run.
 #
 LASTRUN_FILE=${INPUTDIR}/lastrun
-#if [ -f ${LASTRUN_FILE} ]
-#then
-#    if /usr/local/bin/test ${LASTRUN_FILE} -nt ${INPUT_FILE_DEFAULT}
-#    then
-#
-#        echo "Input file has not been updated - skipping load" | tee -a ${LOG_PROC}
-#        # set STAT for shutdown
-#        STAT=0
-#        echo 'shutting down'
-#        shutDown
-#        exit 0
-#    fi
-#fi
+if [ -f ${LASTRUN_FILE} ]
+then
+    if /usr/local/bin/test ${LASTRUN_FILE} -nt ${INPUT_FILE_DEFAULT}
+    then
+
+        echo "Input file has not been updated - skipping load" | tee -a ${LOG_PROC}
+        # set STAT for shutdown
+        STAT=0
+        echo 'shutting down'
+        shutDown
+        exit 0
+    fi
+fi
 
 #
 # Generate the sanity/QC reports
